--- a/.github/workflows/daily-scan.yml
+++ b/.github/workflows/daily-scan.yml
@@ -16,8 +16,9 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: |
-          pip install -r scanner/requirements.txt
+  run: |
+    pip install pandas numpy yfinance
+    pip install git+https://github.com/twopirllc/pandas-ta.git
 
       - name: Run scanner
         run: |
