--- a/.github/workflows/daily-scan.yml
+++ b/.github/workflows/daily-scan.yml
@@ -17,8 +17,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install pandas numpy yfinance
-          pip install git+https://github.com/twopirllc/pandas-ta.git
+          pip install pandas numpy yfinance pandas_ta
+
 
       - name: Run scanner
         run: |
