--- a/.github/workflows/daily-scan.yml
+++ b/.github/workflows/daily-scan.yml
@@ -1,24 +1,25 @@
 name: Daily Swing Scan
 on:
   schedule:
-    - cron: '13 13 * * 1-5'  # runs daily at 18:43 IST (13:13 UTC)
+    - cron: '13 13 * * 1-5'
   workflow_dispatch: {}
 
 jobs:
   run-scan:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.10'   # <<-- IMPORTANT: use 3.10, not 3.11
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install pandas numpy yfinance pandas_ta
-
 
       - name: Run scanner
         run: |
@@ -31,3 +32,4 @@ jobs:
           git add docs/signals.json docs/signals.csv || true
           git commit -m "daily signals $(date +'%Y-%m-%d')" || echo "no changes"
           git push || echo "push failed"
+
