--- a/.github/workflows/daily-scan.yml
+++ b/.github/workflows/daily-scan.yml
@@ -14,12 +14,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'   # <<-- IMPORTANT: use 3.10, not 3.11
+          python-version: '3.10'   # keep 3.10
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas numpy yfinance pandas_ta
+          pip install pandas numpy yfinance pandas-ta
 
       - name: Run scanner
         run: |
@@ -32,4 +32,3 @@ jobs:
           git add docs/signals.json docs/signals.csv || true
           git commit -m "daily signals $(date +'%Y-%m-%d')" || echo "no changes"
           git push || echo "push failed"
-
