--- a/.github/workflows/daily-scan.yml
+++ b/.github/workflows/daily-scan.yml
@@ -1,34 +1,27 @@
 name: Daily Swing Scan
 on:
   schedule:
-    - cron: '13 13 * * 1-5'
+    - cron: '30 13 * * 1-5' # runs 7:00 PM IST Mon–Fri
   workflow_dispatch: {}
 
 jobs:
-  run-scan:
+  scan:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
-
+          python-version: '3.11'
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r scanner/requirements.txt
-
+          pip install yfinance pandas_ta pandas numpy
       - name: Run scanner
         run: |
-          python scanner/scanner.py
+          python scanner.py
+      - name: Commit result
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "update signals"
+          file_pattern: "signals.json"
 
-      - name: Commit signals to docs
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "actions@github.com"
-          git add docs/signals.json docs/signals.csv || true
-          git commit -m "daily signals $(date +'%Y-%m-%d')" || echo "no changes"
-          git push || echo "push failed"
