--- a/.github/workflows/daily-scan.yml
+++ b/.github/workflows/daily-scan.yml
@@ -24,7 +24,10 @@ jobs:
           
       - name: Run scanner
         run: |
-          python scanner.py
+           python scanner/scanner.py
+
+
+          
       - name: Commit result
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
